@@ -1,3 +1,8 @@
+2007-04-21  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/revolver.R (evolver.adi) : added
+	* interfaces/R/src/rinterface.c (R_igraph_evolver_adi) : added
+
 2007-04-20  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/revolver.R (evolver.di) : added
